# MUTTv2.3

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  AI_COLLABORATION_HANDOFF_completed.md  AI_COORDINATION_STATUS.md  ARCHITECT_SIGN_OFF.md  ARCHITECT_STATUS_FOR_GEMINI.md  CHANGELOG.md  CONTRIBUTING.md  CURRENT_PLAN.md  DEPENDABOT_CLEANUP_GUIDE.md  DEPENDABOT_QUICK_COMMANDS.md  Dockerfile  Dockerfile.retention  FILE_INVENTORY.md  Gemini's handoff part 1.md  Gemini's handoff part 10 - Enterprise Readiness Checklist.md  Gemini's handoff part 10 - Enterprise Readiness Checklist_completed.md  Gemini's handoff part 1_completed.md  Gemini's handoff part 2.md  Gemini's handoff part 2_completed.md  Gemini's handoff part 3_completed.md  Gemini's handoff part 4_completed.md  Gemini's handoff part 5 - Ingest Webhook Service_completed.md  Gemini's handoff part 6 - Database Schema - Setup.md  Gemini's handoff part 7 - Vault Setup Guide.md  Gemini's handoff part 9 - v2.5 Roadmap & Enhancement Guide_completed.md  HANDOFF.md  HANDOFF_2025-11-09_65PCT.md  HANDOFF_2025-11-09_65PCT_completed.md  LICENSE  MUTT_Project_Overview_v2.3.md  PHASE_4_HANDOFF.md  PHASE_6_COMPLETION_STATUS.md  PHASE_7_PLAN.md  Phase_2_Completion_Plan_Handoff.md  Phase_3_Handoff_to_Codex.md  QUICKSTART.md  README.md  (+18 more)
.claude/: README.md  budget-check-prompts.md  settings.local.json
.github/: dependabot.yml
ai/: GEMINI_DOCUMENTATION_PROMPT.md
cli/: muttdev
database/: config_audit_schema.sql  mutt_schema.sql  partitioned_event_audit_log.sql  postgres-init.sql
docs/: ALERTER_BACKPRESSURE.md  (+35 more)
(+182 files in other folders)
