[tool.black]
line-length = 100
target-version = ["py39"]
include = "\\.(py)$"
exclude = """
(
  ^\\.git
  | ^\\.venv
  | ^\\.mypy_cache
  | ^build
  | ^dist
  | backup
)
"""

[tool.isort]
profile = "black"
line_length = 100
combine_as_imports = true
force_sort_within_sections = true

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort (imports)
  "UP", # pyupgrade
]
ignore = [
  "E501",  # line length (defer to black)
  "E722",  # bare except (existing v2.3 patterns)
]
exclude = [
  ".git",
  ".venv",
  "build",
  "dist",
]

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = true
ignore_missing_imports = true
no_implicit_optional = false
disallow_untyped_defs = false
check_untyped_defs = false
pretty = true
show_error_codes = true
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "muttdev"
version = "0.1.0"
description = "MUTT v2.5 developer CLI and utilities"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "MUTT Team" }]

[project.scripts]
muttdev = "scripts.muttdev:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["scripts", "services"]
